# serenova

./: .dockerignore  .gitignore  .windsurfrules  AGENTS.md  CLAUDE.md  README.md  docker-compose.yml
backend/: .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  router.py
backend/app/api/endpoints/: __init__.py  auth.py  health.py
backend/app/api/endpoints/blog/: __init__.py
backend/app/api/endpoints/tools/: __init__.py
backend/app/api/endpoints/video/: __init__.py
backend/app/api/v1/: __init__.py  router.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/db/: __init__.py  mysql.py  redis.py
backend/app/models/: __init__.py  user.py
backend/app/models/blog/: __init__.py
backend/app/models/tools/: __init__.py
backend/app/models/video/: __init__.py
backend/app/repositories/: __init__.py  auth_session_repository.py  user_repository.py
backend/app/repositories/blog/: __init__.py
backend/app/repositories/tools/: __init__.py
backend/app/repositories/video/: __init__.py
backend/app/schemas/: __init__.py  auth.py  health.py
backend/app/schemas/blog/: __init__.py
backend/app/schemas/tools/: __init__.py
backend/app/schemas/video/: __init__.py
backend/app/services/: __init__.py  auth_service.py  email_service.py  health_service.py
backend/app/services/blog/: __init__.py
backend/app/services/tools/: __init__.py
backend/app/services/video/: __init__.py
backend/scripts/: migrate_add_email.py  test_auth_flow.py
example/: liquid.html  (+1 more)
(+42 files in other folders)
